<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ld06_sim</name>
  <version>0.1.0</version>
  <description>ld06_sim</description>
  <maintainer email="toshiyuki67026@gmail.com">Toshiyuki Oshima</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
